<resources>
    <string name="app_name">ClosingRepClient</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="caption_test">test</string>
    <string name="setting_title">Setting Aplikasi</string>
    <string name="rest_api_caption">REST API</string>
    <string name="btn_reset_setting">Reset Setting</string>
    <string name="btn_update_setting">Update Setting</string>
    <string name="login_user_name">Username</string>
    <string name="login_password">Password</string>
    <string name="login_title">Please Login First</string>
    <string name="change_rest_server">Change Rest Server</string>
    <string name="rest_server_label">REST Server</string>
    <string name="login">Login</string>
    <string name="reset_database">Reset Database</string>
    <string name="sinkronisasi">Sinkronisasi</string>
    <string name="master_data">Master Data</string>
    <string name="data_product">Data Product</string>
    <string name="data_area">Data Area</string>
    <string name="data_bahan">Data Bahan</string>
    <string name="data_customer">Data Customer</string>
    <string name="input_detail_order">Input Detail Order</string>
    <string name="data_order">Data Order</string>
    <string name="laporan_harian">Laporan Harian</string>
    <string name="tracking_customer">Tracking Customer</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="closing_report">Closing Report</string>
    <string name="sample_text">sample text</string>
    <string name="process">Process</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="pending">Pending</string>
    <string name="detail_order">Detail</string>
    <string name="divider">:</string>
    <string name="app_title">Closing Report App</string>
    <string name="closed">Closed</string>
    <string name="nama">Nama</string>
    <string name="merk">Merk</string>
    <string name="jenis">Jenis</string>
    <string name="qty">Qty</string>
    <string name="serial">Serial</string>
    <string name="bahan">Bahan</string>
    <string name="zero">0</string>
    <string name="del">del</string>
    <string name="tambah_material">Tambah Bahan</string>
    <string name="add">add</string>
    <string name="all">All</string>
    <string name="open">Open</string>
    <string name="search_hint_order">Filter By Nomor / Pelanggan / Alamat</string>
    <string name="alamat">Alamat</string>
    <string name="custphone">No HP</string>
    <string name="no_order">No Order</string>
    <string name="customer">Customer</string>
    <string name="status">Status</string>
    <string name="no_bukti">No Bukti</string>
    <string name="tanggal">Tanggal</string>
    <string name="uploaded">uploaded</string>
    <string name="realisasi_order">Realisasi Order</string>
    <string name="total_qty">Total Qty</string>
    <string name="kode">Kode</string>
    <string name="sd">s/d</string>
    <string name="periode">Periode</string>
    <string name="pemakaian_bahan">Pemakaian Bahan</string>
    <string name="total_order_open">Total Order Open</string>
    <string name="total_order_closed">Total Order Closed</string>
    <string name="total_order_pending">Total Order Pending</string>
    <string name="total_order">Total Order</string>
    <string name="data_not_uploaded">Data belum Terupload</string>
    <string name="total_order_cancel">Total Order Cancel</string>
    <string name="update_order">Update Order</string>
    <string name="dashboard">Dashboard</string>
</resources>
