<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".facade.BaseActivity">

    <SearchView
        android:id="@+id/txtSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:queryHint="@string/search_hint_order" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvOrder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/lightBackground">

    </android.support.v7.widget.RecyclerView>

    <android.support.design.widget.TabLayout
        android:id="@+id/tbStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@android:color/holo_blue_dark"
        app:tabIndicatorColor="@android:color/holo_orange_light"
        app:tabSelectedTextColor="@android:color/white"
        app:tabTextColor="@android:color/holo_blue_bright">

        <android.support.design.widget.TabItem
            android:id="@+id/tbAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all" />

        <android.support.design.widget.TabItem
            android:id="@+id/tbOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open" />

        <android.support.design.widget.TabItem
            android:id="@+id/tbClosed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/closed" />
    </android.support.design.widget.TabLayout>
</LinearLayout>