<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".facade.BaseActivity">

    <TextView
        android:id="@+id/txtLoginTittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:fontFamily="cursive"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/login_title"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center_vertical|center_horizontal">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:id="@+id/txtUserNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_user_name"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/txtUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingRight="20dp"
                android:password="false"
                android:textAlignment="viewStart" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:id="@+id/txtPasswordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_password"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:password="true"
                android:textAlignment="viewStart" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:id="@+id/txtRestServerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rest_server_label"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/txtRestServer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:password="false"
                android:textAlignment="viewStart" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="0"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical"
            android:visibility="visible">

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="0"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnReset"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/reset_database" />

        <Button
            android:id="@+id/btnreset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@android:color/holo_red_light"
            android:text="@string/btn_reset_setting"
            android:textColor="@android:color/white"
            android:visibility="gone" />

    </LinearLayout>
</LinearLayout>