<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    android:paddingLeft="0dp"
    android:paddingRight="0dp">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        app:cardElevation="1dp"
        app:cardUseCompatPadding="true"
        tools:layout_editor_absoluteX="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="5dp"
                    android:text="@string/bahan"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtMaterial"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/nama"
                    android:textAlignment="viewStart"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:orientation="vertical"
                android:padding="2dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="5dp"
                    android:text="@string/qty"
                    android:textAlignment="textEnd"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/txtQty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center_vertical"
                    android:inputType="number"
                    android:text="@string/zero"
                    android:textAlignment="textEnd"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:orientation="vertical"
                android:padding="2dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="5dp"
                    android:text="@string/serial"
                    android:textAlignment="viewStart"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/txtSerial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center_vertical"
                    android:inputType="textPersonName"
                    android:text="0000-0000-0000-0000"
                    android:textAlignment="viewStart"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:orientation="vertical"
                android:padding="2dp">

                <Button
                    android:id="@+id/btnDel"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="bottom"
                    android:text="@string/del"
                    android:textAlignment="textEnd"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>