<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    android:paddingLeft="0dp"
    android:paddingRight="0dp">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        app:cardElevation="1dp"
        app:cardUseCompatPadding="true"
        tools:layout_editor_absoluteX="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:orientation="vertical"
                android:padding="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="5dp"
                    android:text="@string/bahan"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtNama"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/nama"
                    android:textAlignment="viewStart"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:orientation="vertical"
                android:padding="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="5dp"
                    android:text="@string/jenis"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtJenis"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/nama"
                    android:textAlignment="viewStart"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:orientation="vertical"
                android:padding="2dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="5dp"
                    android:text="@string/total_qty"
                    android:textAlignment="textEnd"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtQty"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/zero"
                    android:textAlignment="textEnd"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>