<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".facade.BaseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/periode"
            android:textAlignment="viewStart"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/dtStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:focusable="false"
            android:inputType="date"
            android:text="@string/sample_text"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sd"
            android:textAlignment="viewStart"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/dtEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:focusable="false"
            android:inputType="date"
            android:text="@string/sample_text"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvReport"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp" />
</LinearLayout>