<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/darker_gray"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:padding="5dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="1dp"
        app:cardUseCompatPadding="true"
        tools:layout_editor_absoluteX="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="5dp"
                    android:text="@string/nama"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txtNama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="5dp"
                    android:text="@string/nama"
                    android:textAlignment="textEnd"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:orientation="vertical"
                android:padding="2dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="5dp"
                    android:text="@string/jenis"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txtJenis"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="5dp"
                    android:text="@string/jenis"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:orientation="vertical"
                android:padding="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="5dp"
                    android:text="@string/merk"
                    android:textAlignment="textEnd"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txtMerk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="5dp"
                    android:text="@string/merk"
                    android:textAlignment="textEnd"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>